--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>maven-unit-test</finalName>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
+
+        </plugins>
+    </build>
 </project>
