Metido ejemplos de uso de clases abstractas e Interfaces

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>1.9.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>maven-unit-test</finalName>
