Metidos ejemplos de JDBC

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <version>1.18.26</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.32</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>maven-unit-test</finalName>
